# Chat_gui

./: .gitignore  CMakeLists.txt  Chat.cpp  Chat.h  Connection.cpp  Connection.h  Constants.h  LoadImage.cpp  LoadImage.h  Logger.cpp  Logger.h  Makefile  Message.cpp  Message.h  README.md  SHA256.cpp  TrieNode.cpp  TrieNode.h  Trienode.h  UI.cpp  UI.h  User.cpp  User.h  Users.cpp  Users.h  chat_gui.sln  chat_gui.vcxproj  chat_gui.vcxproj.filters  imgui.ini  imgui.ini_  imgui_demo.cpp  main.cpp  messages.mdf  stackmessenger  users.mdf  vars.cpp  vars.h
imgui/: imgui_demo.cpp
stbi/: stb_image.h
